--- a/index-version-1.html
+++ b/index-version-1.html
@@ -13,7 +13,7 @@
         <meta name="author" content="Benn Cox">
 
         <!-- Website Title Displayed in Browser Tab -->
-        <title>IXD101 Project 03 - A Street Of Crocodiles (Benn Cox)</title>
+        <title>IXD101 Project 03 - A Street Of Crocodiles (Benn Cox) (Version 1)</title>
 
         <!-- Link to CSS Styles -->
         <link rel="stylesheet" href="stylesheet.css">
